Remove floats used for positioning

--- a/index.html
+++ b/index.html
@@ -14,17 +14,10 @@
       <div class="greeting">
         Hello. 
       </div>
-
-      <a href="http://code.joshrosso.com">
-          <div class="subdomain sub-left">
-          code
-          </div>
-      </a>
-      <a href="http://run.joshrosso.com">
-        <div class="subdomain sub-right">
-          run 
-        </div>
-      </a>
+      
+      <div class="inlineBlock">
+        <a href="http://code.joshrosso.com"><div class="subdomain sub-left">code</div></a><a href="http://run.joshrosso.com"><div class="subdomain sub-right">run</div></a>
+      </div>
 
       <div class="bottomBar">
 
