--- a/index.html
+++ b/index.html
@@ -4,36 +4,13 @@
   <head>
     <title>Josh Rosso</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-
     <div class="container">
-
-      <div class="greeting">
-        Hello. 
-      </div>
-      
-      <div class="inlineBlock">
-        <a href="http://code.joshrosso.com"><div class="subdomain sub-left">code</div></a><a href="http://run.joshrosso.com"><div class="subdomain sub-right">run</div></a>
-      </div>
-
-      <div class="bottomBar">
-
-        <div class="socialBar">
-          <a href="https://github.com/joshrosso"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg"></a>
-          <a href="https://twitter.com/joshrosso"><img src="http://dev.bowdenweb.com/a/i/cons/icomoon/svg/twitter-bird.svg"></a>
-          <a href="https://instagram.com/joshrosso"><img src="https://othermachine.co/images/instagram-icon.svg"></a>
-        </div>
-        <div class="name">
-          Josh Rosso
-        </div>
-
-      </div>
-
+      <a href="run.joshrosso.com">run</a>
+      <a href="code.joshrosso.com">code</a>
     </div>
-
   </body>
 
 </html>
