time for new setup

--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <html>
-
 	<head>
-								<link rel="stylesheet" type="text/css" href="posts/css/octetzStyle.css">
-		<title>octetz</title>
+		<title>joshrosso</title>
 	</head>
 	<body>
-		<h1>octetz</h1>
-
-    <h3>Mule</h3>
-    <ul>
-			<li><a href="posts/system-d-service-for-mule">systemd Service for Mule</a></li>
-      <li><a href="posts/hooking-mule-into-rabbitmq.html">Hooking Mule into RabbitMQ</a></li> </ul>
-
-    <h3>Development best practices</h3>
-		<ul>
-			<li><a href="posts/missed-connections-implications-of-pooling">Implications of Pooling Connections</a></li>
-		</ul>
-		<hr>
-    <p>octetz is <a href="http://joshrosso.com">my</a> home for topics I'm learning or simply wish to create a reference of. Considering I could be actively learning topics posted here, you should use caution with its content. If you find issues or that I'm misinformed on a topic, <a href="https://github.com/joshrosso/octetz.com">contribute</a>! </p>
-    
-    <p>All content under <a href="http://www.wtfpl.net">WTFPL</a>.</p>
+    <div style="text-align: center;">
+        <div style="text-align: left; margin: 1em auto; width: 50%;">
+          <p>josh rosso</p>
+          <p>human based in boulder, co</p>
+          <p>---</p>
+          <p><b>projects</b></p>
+          <p>+ mmnts</p>
+          <p style="color: #333;">&nbsp;&nbsp;&nbsp;moments collected over 07/01/2017 to present</p>
+        </div>
+    </div>
 	</body>
 </html>
