--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           <p>human based in boulder, co</p>
           <p>---</p>
           <p><b>projects</b></p>
-          <p>+ mmnts</p>
+          <p><a href="http://joshrosso.com/mmnts">+ mmnts</a></p>
           <p style="color: #333;">&nbsp;&nbsp;&nbsp;moments collected over 07/01/2017 to present</p>
         </div>
     </div>
