--- a/mmnts/index.html
+++ b/mmnts/index.html
@@ -6,6 +6,15 @@
     <div style="text-align: center;">
         <div style="text-align: left; margin: 1em auto; width: 50%;">
           <p>mmnts: september 2017</p>
+          <!-- 0001- -->
+          <div>
+            <img src="0001-machine/0001-0-pawnee.png" width="800">
+            <p>mmnts.0001.(machine)</p>
+            <p>Finally reading Zen and the Art of Motorcycle Maintenance (yw, len). Today, running the Pawnee-Buchanan Loop, I hit a pretty dark spot climbing Buchanan pass. As my brain told my body "homie, you should be able to handle this" and impatience started to consume me. I began geeking thinking of John Sutherland (from zataomm) and how irate he'd get at the first sign of his hog (machine) having mechanical issues. It was a solid reminder to appreciate how much of a homie my machine has been over the years, rather than throwing it under the bus for this one moment. I'm psyched to get to know my machine better over the years and how to show it the patience it needs.  Someday, I could wake up unable to run, bike, ski, etc. But looking back on where this thing has taken me there will be nothing but gratitude. Until then, I'm operating under the assumption I'll be trampled by a moose first.</p> 
+
+            <p>#zenandtheartofmotercyclemaintenence #outdoors #shred #colorado #mountains
+              #ultrarunning #pawnee #indianpeaks #nederland</p>
+          </div>
           <!-- 0000-mishka -->
           <div>
             <img src="0000-mishka/0000-3-mainshot.png" width="300">
@@ -16,9 +25,8 @@
             <img src="0000-mishka/0000-1-insidecabin.png" width="300">
             <img src="0000-mishka/0000-0-vanback.png" width="300">
             <p>mmnts.0000.(mishka)
-            <p>Over the past 4 months, my roommates, father, family friend, and I invested time in bringing Mishka into existence. With no knowledge of electrical, heating, woodworking, and mechanics, it's been a dense exprience. I'm ultra grateful for all the help I've received over the past months, especially from my dad, who kept progress moving whenever I was absent. Mishka represents a lot to me. She's a reminder of how quickly we can make things happen with persistence in the art of 'getting after it'. Happy labor day weekend; I hope you're crushing it.
-
-#vanlife #outdoors #shred #colorado #mountains #ultrarunning</p>
+            <p>Over the past 4 months, my roommates, father, family friend, and I invested time in bringing Mishka into existence. With no knowledge of electrical, heating, woodworking, and mechanics, it's been a dense exprience. I'm ultra grateful for all the help I've received over the past months, especially from my dad, who kept progress moving whenever I was absent. Mishka represents a lot to me. She's a reminder of how quickly we can make things happen with persistence in the art of 'getting after it'. Happy labor day weekend; I hope you're crushing it.</p> 
+            <p>#vanlife #outdoors #shred #colorado #mountains #ultrarunning</p>
           </div>
         </div>
     </div>
