--- a/mmnts/index.html
+++ b/mmnts/index.html
@@ -6,7 +6,17 @@
     <div style="text-align: center;">
         <div style="text-align: left; margin: 1em auto; width: 50%;">
           <p>mmnts: september 2017</p>
-          <!-- 0001- -->
+          <!-- 0002-returning -->
+          <div>
+            <img src="0002-returning/0002-0-bikepeaks.png" width="300">
+            <img src="0002-returning/0002-1-peaks.png" width="300">
+            <img src="0002-returning/0002-2-peakslake.png" width="300">
+            <p>mmnts.0002.(returning)</p>
+            <p>Ran through these dudes yesterday and biked up to them today. Returning feels good.  Whether it's a day or months or years. More importantly, a group of kids waved me down before I hit this highest point (10.5kft). They promptly asked me whether I'd be their friend. I obliged. Then one asked me if I'd be her best friend. After saying "of course", she turned to her [other] friend and said "I hope you aren't jealous that I'm making a lot of new best friends". I appreciated her concern.</p>
+    #ultrarunning #vanlife #indianpeaks #cyclocross @opencycle #dirtbag #shred #colorado</p> 
+            <p>#ultrarunning #pawnee #indianpeaks #nederland</p>
+          </div>
+          <!-- 0001-machine -->
           <div>
             <img src="0001-machine/0001-0-pawnee.png" width="800">
             <p>mmnts.0001.(machine)</p>
