--- a/mmnts/index.html
+++ b/mmnts/index.html
@@ -6,6 +6,14 @@
     <div style="text-align: center;">
         <div style="text-align: left; margin: 1em auto; width: 50%;">
           <p>mmnts: september 2017</p>
+          <!-- 0003-returning -->
+          <div>
+            <img src="0003-mornings/0003-0-sharp.jpg" width="300">
+            <img src="0003-mornings/0003-1-pink.jpg" width="300">
+            <img src="0003-mornings/0003-2-brown.jpg" width="300">
+            <p>mmnts.0003.(mornings)</p>
+            <p>Waking up can suck, but it rarely does.</p>
+          </div>
           <!-- 0002-returning -->
           <div>
             <img src="0002-returning/0002-0-bikepeaks.png" width="300">
@@ -13,8 +21,6 @@
             <img src="0002-returning/0002-2-peakslake.png" width="300">
             <p>mmnts.0002.(returning)</p>
             <p>Ran through these dudes yesterday and biked up to them today. Returning feels good.  Whether it's a day or months or years. More importantly, a group of kids waved me down before I hit this highest point (10.5kft). They promptly asked me whether I'd be their friend. I obliged. Then one asked me if I'd be her best friend. After saying "of course", she turned to her [other] friend and said "I hope you aren't jealous that I'm making a lot of new best friends". I appreciated her concern.</p>
-    #ultrarunning #vanlife #indianpeaks #cyclocross @opencycle #dirtbag #shred #colorado</p> 
-            <p>#ultrarunning #pawnee #indianpeaks #nederland</p>
           </div>
           <!-- 0001-machine -->
           <div>
@@ -22,8 +28,6 @@
             <p>mmnts.0001.(machine)</p>
             <p>Finally reading Zen and the Art of Motorcycle Maintenance (yw, len). Today, running the Pawnee-Buchanan Loop, I hit a pretty dark spot climbing Buchanan pass. As my brain told my body "homie, you should be able to handle this" and impatience started to consume me. I began geeking thinking of John Sutherland (from zataomm) and how irate he'd get at the first sign of his hog (machine) having mechanical issues. It was a solid reminder to appreciate how much of a homie my machine has been over the years, rather than throwing it under the bus for this one moment. I'm psyched to get to know my machine better over the years and how to show it the patience it needs.  Someday, I could wake up unable to run, bike, ski, etc. But looking back on where this thing has taken me there will be nothing but gratitude. Until then, I'm operating under the assumption I'll be trampled by a moose first.</p> 
 
-            <p>#zenandtheartofmotercyclemaintenence #outdoors #shred #colorado #mountains
-              #ultrarunning #pawnee #indianpeaks #nederland</p>
           </div>
           <!-- 0000-mishka -->
           <div>
@@ -36,7 +40,6 @@
             <img src="0000-mishka/0000-0-vanback.png" width="300">
             <p>mmnts.0000.(mishka)
             <p>Over the past 4 months, my roommates, father, family friend, and I invested time in bringing Mishka into existence. With no knowledge of electrical, heating, woodworking, and mechanics, it's been a dense exprience. I'm ultra grateful for all the help I've received over the past months, especially from my dad, who kept progress moving whenever I was absent. Mishka represents a lot to me. She's a reminder of how quickly we can make things happen with persistence in the art of 'getting after it'. Happy labor day weekend; I hope you're crushing it.</p> 
-            <p>#vanlife #outdoors #shred #colorado #mountains #ultrarunning</p>
           </div>
         </div>
     </div>
