--- a/mmnts/index.html
+++ b/mmnts/index.html
@@ -1,11 +1,23 @@
 <html>
 	<head>
 		<title>mmnts</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 	 </head>
 	<body>
     <div style="text-align: center;">
-        <div style="text-align: left; margin: 1em auto; width: 50%;">
+        <div style="text-align: left; margin: 1em auto; width: 920px;">
           <p>mmnts: september 2017</p>
+          <!-- 0005-approach -->
+          <div>
+            <img src="0005-approach/0005-0-bear.jpg" width="100%">
+            <p>mmnts.0005.(approach)</p>
+            <p>The approach to bear via bear peak west ridge. 15 days away from bear 100. The stoke to be in Utah is growing.</p>
+          </div>
+          <!-- 0004-racing -->
+          <div>
+            <p>mmnts.0004.(racing)</p>
+            <p>Hours spent racing on the continental divide pale in comparison to hours spent with quality humans. 2nd place in the Devil and the Divide 22k today. Feeling strong and psyched to race Bear 100 in 2 weeks. Elated when reminded that homies are coming from around the US to help me suffer in proper form September 29th. Hope you're having a great weekend.</p>
+          </div>
           <!-- 0003-returning -->
           <div>
             <img src="0003-mornings/0003-0-sharp.jpg" width="300">
@@ -24,7 +36,7 @@
           </div>
           <!-- 0001-machine -->
           <div>
-            <img src="0001-machine/0001-0-pawnee.png" width="800">
+            <img src="0001-machine/0001-0-pawnee.png" width="100%">
             <p>mmnts.0001.(machine)</p>
             <p>Finally reading Zen and the Art of Motorcycle Maintenance (yw, len). Today, running the Pawnee-Buchanan Loop, I hit a pretty dark spot climbing Buchanan pass. As my brain told my body "homie, you should be able to handle this" and impatience started to consume me. I began geeking thinking of John Sutherland (from zataomm) and how irate he'd get at the first sign of his hog (machine) having mechanical issues. It was a solid reminder to appreciate how much of a homie my machine has been over the years, rather than throwing it under the bus for this one moment. I'm psyched to get to know my machine better over the years and how to show it the patience it needs.  Someday, I could wake up unable to run, bike, ski, etc. But looking back on where this thing has taken me there will be nothing but gratitude. Until then, I'm operating under the assumption I'll be trampled by a moose first.</p> 
 
