--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <html>
-	<head>
-		<title>joshrosso</title>
-	</head>
-	<body>
-    <div style="text-align: center;">
-        <div style="text-align: left; margin: 1em auto; width: 50%;">
-          <p>josh rosso</p>
-          <p>human based in boulder, co</p>
-          <p>---</p>
-          <p><b>projects</b></p>
-          <p><a href="http://joshrosso.com/mmnts">+ mmnts</a></p>
-          <p style="color: #333;">&nbsp;&nbsp;&nbsp;moments collected over 07/01/2017 to present</p>
-        </div>
+
+  <head>
+
+    <title>Josh Rosso</title>
+
+    <!-- begin css -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <style>
+
+p {
+  line-height: .7em;
+  font-family: Roboto;
+}
+
+.main {
+  margin-top: 2.5em;  
+  margin-left: 2em;  
+}
+
+    </style>
+    <!-- end css -->
+
+  </head>
+
+  <body>
+
+    <div class="main">
+          <p>Josh Rosso</p>
+          <p>Boulder, CO</p>
+          <p>Software Engineer: Distributed Systems, Containers, Linux</p>
+          <p>
+             <a href="https://www.instagram.com/joshrosso">Instagram</a> | 
+             <a href="https://twitter.com/joshrosso">Twitter</a> | 
+             <a href="https://github.com/joshrosso">GitHub</a> | 
+             <a href="https://www.linkedin.com/in/joshrosso">LinkedIn</a>
+          </p>
     </div>
-	</body>
+
+  </body>
+
 </html>
