--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@ p {
           <p>Josh Rosso</p>
           <p>Boulder, CO</p>
           <p>Software Engineer: Distributed Systems, Containers, Linux</p>
-          <p>
+	  <p>Resume: 
+             <a href="resume.txt">txt</a> |
+             <a href="resume.pdf">pdf</a>
+	  </p>
+          <p>Social:
              <a href="https://www.instagram.com/joshrosso">Instagram</a> | 
              <a href="https://twitter.com/joshrosso">Twitter</a> | 
              <a href="https://github.com/joshrosso">GitHub</a> | 
